build: 升级 vite 后解决打包问题。

--- a/package.json
+++ b/package.json
@@ -1,17 +1,18 @@
 {
   "name": "vue3-vite-demo",
-  "version": "0.0.0",
+  "version": "1.0.0",
   "scripts": {
     "dev": "vite",
     "preview": "vite preview",
     "build": "vite build"
   },
   "dependencies": {
+    "@vitejs/plugin-vue": "^2.2.4",
     "link-node": "^1.0.2",
     "vue": "^3.0.4"
   },
   "devDependencies": {
     "typescript": "^4.5.5",
-    "vite": "^1.0.0-rc.13"
+    "vite": "^2.8.6"
   }
 }
