--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "build": "vite build"
   },
   "dependencies": {
+    "@vitejs/plugin-legacy": "^1.7.1",
     "@vitejs/plugin-vue": "^2.2.4",
     "link-node": "^1.0.2",
     "vue": "^3.0.4"
